k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: country-info-service
  labels:
    app.kubernetes.io/name: country-info-service
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: country-info-service
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
